# elfstudy

./: CMakeLists.txt  LICENSE  README.md
cmake/: linux.toolchain.cmake
include/: common.h  elf.h  elf_header.h  elf_spec.h  program_header.h  section_header.h  string_tab.h  symbol_tab.h
src/: elf.cc  elf_header.cc  main.cc  program_header.cc  section_header.cc  string_tab.cc  symbol_tab.cc
